overflow fix

--- a/css/_products.scss
+++ b/css/_products.scss
@@ -32,7 +32,7 @@
     }
 
     img {
-        inline-size: 26.25rem;
+        max-inline-size: 26.25rem;
     }
 
     .textbox {
